miq-ansibleapp/ansible/roles/miq-ansibleapp-openshift/files/miq-app-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: miq-ansibleapp
    service: miq-app
  name: miq-app
spec:
  ports:
  - name: port-80
    port: 80
    protocol: TCP
    targetPort: 80
  - name: port-443
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: miq-ansibleapp
    service: miq-app
  sessionAffinity: None
  type: ClusterIP
