miq-ansibleapp/ansible/roles/miq-ansibleapp-openshift/files/miq-memcached-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: miq-ansibleapp
    service: miq-memcached
  name: miq-memcached
spec:
  ports:
  - name: port-11211
    port: 11211
    protocol: TCP
    targetPort: 11211
  selector:
    app: miq-ansibleapp
    service: miq-memcached
  sessionAffinity: None
  type: ClusterIP
