miq-ansibleapp/ansible/roles/miq-ansibleapp-openshift/files/miq-postgresql-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: miq-ansibleapp
    service: miq-postgresql
  name: miq-postgresql
spec:
  ports:
  - name: port-5432
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: miq-ansibleapp
    service: miq-postgresql
  sessionAffinity: None
  type: ClusterIP
