miq-ansibleapp/ansible/roles/miq-ansibleapp-openshift/files/miq-app-route.yml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: miq-ansibleapp
    service: miq-app
  name: miq-app
spec:
  port:
    targetPort: port-443
  tls:
    termination: passthrough
  to:
    kind: Service
    name: miq-app
    weight: 100
